--- a/static/stile homepage.css
+++ b/static/stile homepage.css
@@ -8,7 +8,7 @@ body,html {
 }
 
 .container{
-  background-color: #881c1c;
+  display: flexbox;
   width: 30%;
   margin: 20px;
   padding: 20px;
@@ -23,6 +23,7 @@ body,html {
   padding: 10px 2% 10px 2%;
   margin: 0;
   background-color: #fff;
+  position: fixed;
 }
 
 .logo {
@@ -85,19 +86,15 @@ body,html {
 }
 
 
-.utentelog{
-  display: none;
-}
+
 
 .menu {
   display: flex;
-  border-bottom: 5px solid #e4e4e4;
   justify-content: space-between;
   align-items: center;
   font-weight: bold ;
   background-color: #fff;
-  padding: 1% 0 0.5% 2%;
-  margin: 0;
+  margin-top: 3px;
 }
 
 .menu ul{padding: 0px; margin: 0;}
@@ -125,7 +122,7 @@ body,html {
   justify-content: space-between;
   align-items: baseline;
   margin: 0;
-  padding: 0;
+  padding-top: 1%;
 }
 
 
@@ -137,7 +134,7 @@ body,html {
   padding: 20px;
 }
 
-.spot {
+.spotted {
   display: grid;
   box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
   -webkit-box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
@@ -154,6 +151,7 @@ body,html {
 
 .filtri {
   display: flex;
+  width: 90%;
   box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
   -webkit-box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
   -moz-box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
@@ -162,10 +160,50 @@ body,html {
   background-color: #fff;
   justify-content: space-between;
   align-items: center;
-  margin: 20px;
-  padding: 20px;  
+  margin-bottom: 20px;
 }
 
 .facolta{
   width: 50%;
+}
+
+
+
+.creaspot {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  height: 30px;
+  background-color:#fff;
+  border-radius: 3px;
+  box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
+  -webkit-box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
+  -moz-box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
+
+}
+.createimg{
+  width: 15%;
+  height: 90%;
+}
+
+#spot{
+  width: 100%;
+  font-style: 16px;
+  border: 0px;
+}
+
+.btninvia{
+  width: 30%;
+  height: 100%;
+  background-color: #881c1c;
+  font-size: 14px;
+  color: #fff;
+  border: #881c1c 3px;
+  border-radius: 3px;
+}
+
+
+.utentelog{
+  display: none;
 }
