--- a/templates/home.html
+++ b/templates/home.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" initial-scale=1.0>
     <link rel="stylesheet" href="/static/stile homepage.css">
+    <script language="JavaScript" type="text/javascript" src="homepage.js"></script>
     <title>Spotted Sapienza</title>
 </head>
 <body>
 
     <header class="header">
-        <img src="/static/images/LOGO.svg" alt="Spotted Sapienza logo" class="logo">
+        <div class="logo">
+            <img src="/static/images/Logo sapienza.jpg" class="logoimg">SPOTTED SAPIENZA
+        </div>
 
         <nav class="menu">
             <ul>
@@ -31,12 +34,9 @@
             <img src="/static/images/user.svg" class="userimg">
             <a href="" class="profilo">Il mio profilo</a>
         </span>
-     
-        
-    
     </header>
 
-    
+
     <div class="bacheca">
         <div class="riquadrospot">
             <div class="spotted">
@@ -111,41 +111,6 @@
         
         
         
-    </div>
-
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-    var isLoggedIn = false; // Imposta lo stato di accesso dell'utente
-
-    // Verifica se l'utente è già autenticato (ad esempio, tramite cookie o sessione)
-    // Imposta isLoggedIn a true o false di conseguenza
-
-    if (isLoggedIn) {
-        // L'utente è autenticato, mostra il pulsante per la pagina dell'utente
-        document.getElementById("utentelog").style.display = "inline-block";
-    } else {
-        // L'utente non è autenticato, mostra i pulsanti di accesso e registrazione
-        document.getElementById("sign").style.display = "inline-block";
-    }
-
-    // Aggiungi un gestore di eventi per il clic sul pulsante di accesso
-    document.getElementById("sign").addEventListener("click", function() {
-        // Simula l'accesso dell'utente (nel tuo caso, potresti implementare la logica di autenticazione)
-        isLoggedIn = true;
-        // Nascondi i pulsanti di accesso e registrazione
-        document.getElementById("sign").style.display = "none";
-        // Mostra il pulsante per la pagina dell'utente
-        document.getElementById("utentelog").style.display = "inline-block";
-    });
-
-    // Aggiungi un gestore di eventi per il clic sul pulsante della pagina dell'utente
-    document.getElementById("userpage").addEventListener("click", function() {
-        // Reindirizza l'utente alla pagina dell'utente
-        window.location.href = "paginautente";
-    });
-});
-
-</script>
-    
+    </div>    
 </body>
 </html>
