--- a/static/stile homepage.css
+++ b/static/stile homepage.css
@@ -7,6 +7,33 @@ body,html {
   background-color: #f2f2f2;
 }
 
+
+
+
+.header {
+  display: flex;
+  position: fixed;
+  width: 100%;
+  border-bottom: 5px solid #e4e4e4;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 0.5%;
+  padding-bottom: 0.5%;
+  background-color: #fff;
+}
+
+.logo{
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.logoimg {
+  width: 10%;
+  margin-right: 10px;
+}
+
 .container{
   display: flexbox;
   width: 30%;
@@ -14,25 +41,36 @@ body,html {
   padding: 20px;
 }
 
-
-.header {
+.menu {
   display: flex;
-  border-bottom: 5px solid #e4e4e4;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 2% 10px 2%;
-  margin: 0;
+  font-weight: bold ;
   background-color: #fff;
-  position: fixed;
+  margin-top: 3px;
 }
 
-.logo {
-  display: flex
+.menu ul{padding: 0px; margin: 0;}
+.menu li {display: inline-block ;}
+.menu a {text-decoration: none ; color: black; padding: 5px 10px; display: block;}
+.menu li ::after{
+  content: '';
+  width: 0%;
+  height: 3px;
+  background: #881c1c;
+  border-radius: 3px;
+  display: block;
+  margin:auto;
+  margin-top: 3px;
+  transition: 0.5s;
+}
+.menu li :hover::after {
+  width: 100%;
 }
 
 .sign{
   display: flex;
-  border: 3px  ;
+  border: 3px;
   justify-content: space-between;
   align-items: center;
   font-size: 12px;
@@ -87,33 +125,6 @@ body,html {
 
 
 
-
-.menu {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-weight: bold ;
-  background-color: #fff;
-  margin-top: 3px;
-}
-
-.menu ul{padding: 0px; margin: 0;}
-.menu li {display: inline-block ;}
-.menu a {text-decoration: none ; color: black; padding: 5px 10px; display: block;}
-.menu li ::after{
-  content: '';
-  width: 0%;
-  height: 3px;
-  background: #881c1c;
-  border-radius: 3px;
-  display: block;
-  margin:auto;
-  margin-top: 3px;
-  transition: 0.5s;
-}
-.menu li :hover::after {
-  width: 100%;
-}
 
 
 
