--- a/templates/home.html
+++ b/templates/home.html
@@ -13,9 +13,9 @@
 
         <nav class="menu">
             <ul>
-                <li><a href="home.html">Bacheca</a></li>
-               <li><a href="mappa.html">Feste</a></li> 
-                <li><a href="">Quiz</a></li>
+                <li><a href="/home">Bacheca</a></li>
+               <li><a href="/mappa">Feste</a></li> 
+                <li><a href="/classifica">Quiz</a></li>
             </ul>   
         </nav>
 
@@ -31,8 +31,6 @@
             <img src="/static/images/user.svg" class="userimg">
             <a href="" class="profilo">Il mio profilo</a>
         </span>
-     
-        
     
     </header>
 
