--- a/static/stile mappa.css
+++ b/static/stile mappa.css
@@ -10,115 +10,146 @@ body,html {
   
   
   
-  .header {
-    display: flex;
-    position: fixed;
-    width: 100%;
-    border-bottom: 5px solid #e4e4e4;
-    justify-content: space-around;
-    align-items: center;
-    padding-top: 0.5%;
-    padding-bottom: 0.5%;
-    background-color: #fff;
-  }
-  
-  .logo{
-    display: flex;
-    align-items: center;
-    font-size: 20px;
-    font-weight: bold;
-  }
-  
-  .logoimg {
-    width: 10%;
-    margin-right: 10px;
-  }
-  
-  .container{
-    display: flexbox;
-    width: 30%;
-    margin: 20px;
-    padding: 20px;
-  }
-  
-  .menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: bold ;
-    background-color: #fff;
-    margin-top: 3px;
-  }
-  
-  .menu ul{padding: 0px; margin: 0;}
-  .menu li {display: inline-block ;}
-  .menu a {text-decoration: none ; color: black; padding: 5px 10px; display: block;}
-  .menu li ::after{
-    content: '';
-    width: 0%;
-    height: 3px;
-    background: #881c1c;
-    border-radius: 3px;
-    display: block;
-    margin:auto;
-    margin-top: 3px;
-    transition: 0.5s;
-  }
-  .menu li :hover::after {
-    width: 100%;
-  }
-  
-  .sign{
-    display: flex;
-    border: 3px;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 12px;
-  }
-  
-  .signin {
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-    border: solid 5px #881c1c;
-    background-color: #881c1c;
-    border-radius: 3px;
-    margin: 3px;
-    padding: 3px;
-  }
-  
-  .reg {
-    color: #fff;
-    text-decoration: none;
-    margin-left: 4px;
-  }
-  
-  .login {
-    display: flex;
-    justify-content: center;
-    color: #881c1c;
-    border: solid 5px #eaeaea;
-    background-color: #eaeaea;
-    text-decoration: none;
-    border-radius: 3px;
-    margin: 3px;
-    padding: 3px;
-  }
-  
-  .userpage {
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-    border: solid 5px #881c1c;
-    background-color: #881c1c;
-    border-radius: 3px;
-    margin: 3px;
-    padding: 3px;
-  }
-  
-  .profilo {
-    color: #fff;
-    text-decoration: none;
-    margin-left: 4px;
-    font-size: 12px;
-  }
+.header {
+  display: flex;
+  width: 100%;
+  border-bottom: 5px solid #e4e4e4;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 0.5%;
+  padding-bottom: 0.5%;
+  background-color: #fff;
+}
+
+.logo{
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.logoimg {
+  width: 10%;
+  margin-right: 10px;
+}
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold ;
+  background-color: #fff;
+  margin-top: 3px;
+}
+
+.menu ul{padding: 0px; margin: 0;}
+.menu li {display: inline-block ;}
+.menu a {text-decoration: none ; color: black; padding: 5px 10px; display: block;}
+.menu li ::after{
+  content: '';
+  width: 0%;
+  height: 3px;
+  background: #881c1c;
+  border-radius: 3px;
+  display: block;
+  margin:auto;
+  margin-top: 3px;
+  transition: 0.5s;
+}
+.menu li :hover::after {
+  width: 100%;
+}
+
+.sign{
+  display: flex;
+  border: 3px;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 12px;
+}
+
+.signin {
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
+  border: solid 5px #881c1c;
+  background-color: #881c1c;
+  border-radius: 3px;
+  margin: 3px;
+  padding: 3px;
+}
+
+.reg {
+  color: #fff;
+  text-decoration: none;
+  margin-left: 4px;
+}
+
+.login {
+  display: flex;
+  justify-content: center;
+  color: #881c1c;
+  border: solid 5px #eaeaea;
+  background-color: #eaeaea;
+  text-decoration: none;
+  border-radius: 3px;
+  margin: 3px;
+  padding: 3px;
+}
+
+.userpage {
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
+  border: solid 5px #881c1c;
+  background-color: #881c1c;
+  border-radius: 3px;
+  margin: 3px;
+  padding: 3px;
+}
+
+.profilo {
+  color: #fff;
+  text-decoration: none;
+  margin-left: 4px;
+  font-size: 12px;
+}
+
+
+.container {
+  display: flex;
+  height: calc(100vh - 64px); /* Altezza della finestra meno l'altezza del menu */
+}
+.left-column,
+.right-column {
+  padding: 20px;
+}
+.left-column {
+  flex: 1; /* Imposta la colonna sinistra con flex 1 */
+  background-color: #881c1c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.right-column {
+  flex: 2; /* Imposta la colonna destra con flex 2 */
+  background-color: #eaeaea;
+  position: relative; /* Posizione relativa necessaria per la mappa */
+}
+#map {
+  width: 100%;
+  height: 100%;
+  position: absolute; /* Posizione assoluta per far occupare la mappa l'intera altezza e larghezza della colonna */
+  top: 0;
+  left: 0;
+}
+.form-container {
+  max-width: 400px; /* Imposta una larghezza massima per il form container */
+  width: 100%; /* Imposta la larghezza al 100% per il form container */
+  padding: 20px; /* Aggiungi spazio interno al form container */
+  background-color: #fff; /* Sfondo bianco per il form container */
+  border-radius: 8px; /* Bordi arrotondati per il form container */
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Ombra leggera per il form container */
+  box-sizing: border-box; /* Imposta il box-sizing a border-box */
+  margin-right: 20px; /* Aggiunge un margine a destra per separare dalla mappa */
+}
