--- a/static/stile homepage.css
+++ b/static/stile homepage.css
@@ -160,8 +160,8 @@ body,html {
 }
 
 
-.filtri {
-  display: flex;
+.cerca{
+  display: flexbox;
   width: 90%;
   box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
   -webkit-box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
@@ -171,6 +171,11 @@ body,html {
   background-color: #fff;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 20px;
+}
+
+.filtri {
+  display: flex;
   margin-bottom: 20px;
 }
 
@@ -185,7 +190,7 @@ body,html {
   justify-content: space-between;
   align-items: center;
   width: 90%;
-  height: 30px;
+  height: 2em;
   background-color:#fff;
   border-radius: 3px;
   box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
@@ -216,5 +221,5 @@ body,html {
 
 
 .utentelog{
-  display: none;
+  display: ;
 }
