--- a/templates/home.html
+++ b/templates/home.html
@@ -34,6 +34,13 @@
             <img src="/static/images/user.svg" class="userimg">
             <a href="" class="profilo">Il mio profilo</a>
         </span>
+
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
     </header>
 
 
