--- a/static/stile homepage.css
+++ b/static/stile homepage.css
@@ -125,6 +125,52 @@ body,html {
 
 
 
+.hamburger{display: none;}
+
+@media (max-width: 768px) {
+  .header{
+    position:relative;
+    padding-left: 20px;
+    padding-right: 60px;
+    width: auto;
+    justify-content:space-around;
+    background-color: #fff;
+    overflow:hidden}
+  .menu{
+    position: absolute;
+    top:47px;
+    right:-100%;
+    width: 100%;
+    transition: 0.3s;
+  }
+  .menu li{width: 100%;} 
+
+  .menu open {right:0}
+
+  .hamburger{
+    display: block;
+    justify-content: center;
+    border: #000 solid;
+    height: 25px;
+    width: 30px;
+    position: absolute;
+    right:10px;
+  }
+
+  .hamburger span{
+    display: block;
+    top: 8px;
+    position: absolute;
+    width: 30px; 
+    height: 3px;
+    background-color: #881c1c;
+  }
+
+  .hamburger span:nth-child(1){margin-top: 5px;}
+  .hamburger span:nth-child(2){margin-top: 10px}
+  .hamburger span:nth-child(3){margin-top: 15px;}
+}
+
 
 
 
