--- a/templates/home.html
+++ b/templates/home.html
@@ -16,9 +16,9 @@
 
         <nav class="menu">
             <ul>
-                <li><a href="home.html">Bacheca</a></li>
-               <li><a href="mappa.html">Feste</a></li> 
-                <li><a href="classifica.html">Quiz</a></li>
+                <li><a href="/home">Bacheca</a></li>
+               <li><a href="/mappa">Feste</a></li> 
+                <li><a href="/classifica">Quiz</a></li>
             </ul>   
         </nav>
         <div class="sign">
@@ -32,52 +32,26 @@
 
         <span class="userpage utentelog">
             <img src="/static/images/user.svg" class="userimg">
-            <a href="" class="profilo">Il mio profilo</a>
+            <a href="/profilo" class="profilo">Il mio profilo</a>
         </span>
     </header>
 
+    
 
     <div class="bacheca">
         <div class="riquadrospot">
+            <a href="/profilo">asdsdasas</a>
             <div class="spotted">
                 <a href="">Nome utente</a>
                 <a href="" class="">Spotto persone!!</a>
                 <a href="" class="commenti">Commenti</a>
             </div>
-            <div>
-                <a href="" class="spotted">Spotto persone!!</a>
+            {% for spot in spot %}
+            <div class="spotted">
+                <p>{{ spot.utente }}</p>
+                <p>{{ spot.contenuto }}</p>
             </div>
-            <div>
-                <a href="" class="spotted">Spotto persone!!</a>
-            </div>
-            <div>
-                <a href="" class="spotted">Spotto persone!!</a>
-            </div>
-            <div>
-                <a href="" class="spotted">Spotto persone!!</a>
-            </div>
-            <div>
-                <a href="" class="spotted">Spotto persone!!</a>
-            </div>        
-            <div>
-                <a href="" class="spotted">Spotto persone!!</a>
-            </div>
-            <div>
-                <a href="" class="spotted">Spotto persone!!</a>
-            </div>        
-
-            <div>
-                <a href="" class="spotted">Spotto persone!!</a>
-            </div>
-            <div>
-                <a href="" class="spotted">Spotto persone!!</a>
-            </div>
-            <div>
-                <a href="" class="spotted">Spotto persone!!</a>
-            </div>
-            <div>
-                <a href="" class="spotted">Spotto persone!!</a>
-            </div>
+            {% endfor %}
         </div>
 
     <div class="container">
