Correzione registrazione tramite Json

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,9 +16,9 @@
 
         <nav class="menu">
             <ul>
-                <li><a href="home.html">Bacheca</a></li>
-               <li><a href="mappa.html">Feste</a></li> 
-                <li><a href="classifica.html">Quiz</a></li>
+                <li><a href="/home">Bacheca</a></li>
+               <li><a href="/mappa">Feste</a></li> 
+                <li><a href="/classifica">Quiz</a></li>
             </ul>   
         </nav>
         <div class="sign">
