--- a/templates/reg_page.html
+++ b/templates/reg_page.html
@@ -7,60 +7,69 @@
     <title>Sign in pop up</title>
     <script type="application/javascript">
         function validateSign() {
-            var nome=document.registr.Name.value;
-            var cognome=document.registr.Surname.value;
-            var email=document.registr.email.value;
-            var password=document.registr.pwd.value;
-            var facolta=document.registr.Facolta.value;
-            var passwordPattern=/^(?=.*[A-Z])(?=.*\d)(?=.*[*\/\-+!%&$]).{4,}$/;
-            if(nome==""){
+            var nome = document.registr.Name.value;
+            var cognome = document.registr.Surname.value;
+            var email = document.registr.email.value;
+            var password = document.registr.pwd.value;
+            var facolta = document.registr.facolta.value;
+        
+            var passwordPattern = /^(?=.*[A-Z])(?=.*\d)(?=.*[*\/\-+!%&$]).{4,}$/;
+            if (nome == "") {
                 alert("Inserire Nome");
                 return false;
-            }else if(cognome==""){
+            } else if (cognome == "") {
                 alert("Inserire Cognome");
                 return false;
-            }else if (email==""){
+            } else if (email == "") {
                 alert("Inserire l'email");
                 return false;
-            }else if(email.indexOf('@')===-1){
+            } else if (email.indexOf('@') === -1) {
                 alert("Formato email errato")
-            }else if(password==""){
+            } else if (password == "") {
                 alert("Inserire la password");
                 return false;
-            }else if(!passwordPattern.test(password)){
+            } else if (!passwordPattern.test(password)) {
                 alert("La password deve contenere almeno 4 caratteri, di cui almeno una lettera maiuscola, una minuscola, un numero e un simbolo");
                 return false;
-            }else if(password!=document.registr.confpwd.value){
+            } else if (password != document.registr.confpwd.value) {
                 alert("password differenti");
                 return false;
             }
-            //invio dati con AJAX
-            // Creazione dell'oggetto XMLHttpRequest
-            var xhr = new XMLHttpRequest();
-            // Definizione della funzione da eseguire al completamento della richiesta
-            xhr.onreadystatechange = function() {
-                if (xhr.readyState === XMLHttpRequest.DONE) {
-                    if (xhr.status === 200) {
-                        // Reindirizza alla pagina principale in caso di successo
-                        window.location.href = 'home.html';
-                    } else {
-                        // Gestisci eventuali errori
-                        console.error('Errore:', xhr.responseText);
-                    }
-                }
+            // Costruisci l'oggetto dei dati da inviare al server
+            var data = {
+                nome: nome,
+                cognome: cognome,
+                email: email,
+                password: password,
+                facolta: facolta // Invia il codice della facoltà al server
             };
-            // Impostazione della richiesta POST al server Flask
-            xhr.open('POST', '/registrazione', true);
-            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
 
-            // Creazione della stringa dei dati da inviare
-            var data = 'nome=' + encodeURIComponent(nome) + '&cognome=' + encodeURIComponent(cognome) + '&email=' + encodeURIComponent(email) + '&password=' + encodeURIComponent(password) + '&facolta=' + encodeURIComponent(facolta);
+            // Invia una richiesta POST al server Flask
+            fetch('/registrazione', {
+                method: 'POST',
+                headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(data)
+            })
+            .then(response => {
+                if (response.ok) {
+                    // Reindirizza alla pagina di successo se la registrazione è avvenuta con successo
+                    window.location.href = '/successo';
+                } else {
+                    // Gestisci eventuali errori di registrazione
+                alert("Errore durante la registrazione");
+                }
+            })
+            .catch(error => {
+                console.error('Errore durante la richiesta di registrazione:', error);
+            });
 
-            // Invio della richiesta con i dati
-            xhr.send(data);
-                return true;
-        };
-   </script>  
+            // Impedisce l'invio del modulo HTML
+            return false;
+        }
+    </script>
+    
 </head>
 <body>
     <div class="card">
@@ -90,23 +99,15 @@
                 <input autocomplete="off" id="confpwd" placeholder="Conferma Password" class="input-field" type="password">
             </div>
             <div class="field">
-                    <path d="M80 192V144C80 64.47 144.5 0 224 0C303.5 0 368 64.47 368 144V192H384C419.3 192 448 220.7 448 256V448C448 483.3 419.3 512 384 512H64C28.65 512 0 483.3 0 448V256C0 220.7 28.65 192 64 192H80zM144 192H304V144C304 99.82 268.2 64 224 64C179.8 64 144 99.82 144 144V192z"></path></svg>
-                    <div class="custom-select">
-                        <select id="Facolta" class="input-field">
-                            <option value="" disabled selected >Seleziona Facoltà</option>
-                            <option value="Architettura">Architettura</option>
-                            <option value="Economia">Economia</option>
-                            <option value="Farmacia e medicina">Farmacia e medicina</option>
-                            <option value="Giurisprudenza">Giurisprudenza</option>
-                            <option value="Ingegneria civile e industriale">Ingegneria civile e industriale</option>
-                            <option value="Ingegneria dell'informazione, informatica e statistica">Ingegneria dell'informazione, informatica e statistica</option>
-                            <option value="Lettere e filosofia">Lettere e filosofia</option>
-                            <option value="Medicina e odontoiatria">Medicina e odontoiatria</option>
-                            <option value="Medicina e psicologia">Medicina e psicologia</option>
-                            <option value="Scienze matematiche, fisiche e naturali">Scienze matematiche, fisiche e naturali</option>
-                            <option value="Scienze politiche sociologia comunicazione">Scienze politiche sociologia comunicazione</option>
-                        </select>
-                    </div>
+                <path d="M80 192V144C80 64.47 144.5 0 224 0C303.5 0 368 64.47 368 144V192H384C419.3 192 448 220.7 448 256V448C448 483.3 419.3 512 384 512H64C28.65 512 0 483.3 0 448V256C0 220.7 28.65 192 64 192H80zM144 192H304V144C304 99.82 268.2 64 224 64C179.8 64 144 99.82 144 144V192z"></path></svg>
+                <div class="custom-select">
+                <select name="facolta" id="facolta" class="input-field">
+                <option value="" disabled selected>Seleziona Facoltà</option>
+                    {% for f in facolta %}
+                        <option value="{{ f.codice }}">{{ f.nome }}</option>
+                    {% endfor %}
+                </select>
+                </div>
             </div>
             <button class="btn" type="button" onclick="validateSign()">Sign in</button>
         </form>
