unione app.py e reg.py

--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
         <div class="sign">
             <span class="signin">
                 <img src="/static/images/user-plus.svg" class="userplusimg">
-                <a href="reg_page.html" class="reg" onclick="openCard(event, 'reg_page.html')">Registrati</a>
+                <a href="/reg_page" class="reg" onclick="openCard(event, '/reg_page')">Registrati</a>
             </span>
             <a href="loginpage.html" class="login" onclick="openCard(event, 'loginpage.html')">Accedi</a>
         </div>
