--- a/static/stile homepage.css
+++ b/static/stile homepage.css
@@ -7,6 +7,17 @@ body,html {
   background-color: #f2f2f2;
 }
 
+/* Stili per la copertura semitrasparente */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Colore nero semitrasparente */
+  z-index: 999; /* Assicura che la copertura sia sopra la schermata home */
+  display: none; /* Inizialmente nascosta */
+}
 
 
 
@@ -269,3 +280,110 @@ body,html {
 .utentelog{
   display: none;
 }
+
+h1 {font-size: 16px;color: #881c1c;}
+.card {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 360px; /* Ampiezza fissa */
+  height: 360px; /* Altezza fissa */
+  background: white;
+  z-index: 1000;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+}
+
+.card iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+.close-btn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+/*Inputs*/
+.field {
+  margin-top: .5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: .5em;
+  background-color: whitesmoke;
+  border-radius: 4px;
+  padding: .5em 1em;
+}
+   
+.input-icon {
+  height: 1em;
+  width: 1em;
+  fill: #881c1c;
+}
+   
+   .input-field {
+    background: none;
+    border: none;
+    outline: none;
+    width: 100%;
+    color: black;
+   }
+   .input-field::placeholder {
+    color: black; 
+  }
+   
+   /*Text*/
+   .title {
+    margin-bottom: 1rem;
+    font-size: 1.5em;
+    font-weight: 500;
+    color: #881c1c;
+   }
+   
+   /*Buttons*/
+   .btn {
+    margin: 1rem;
+    border: none;
+    border-radius: 4px;
+    font-weight: bold;
+    font-size: .8em;
+    text-transform: uppercase;
+    padding: 0.6em 1.2em;
+    background-color: #881c1c;
+    color: whitesmoke;
+    box-shadow: 0 8px 24px 0 rgb(255 235 167 / 20%);
+    transition: all .3s ease-in-out;
+   }
+   
+   .btn-link {
+    color: rgb(122, 84, 84);
+    display: block;
+    font-size: .75em;
+    transition: color .3s ease-out;
+   }
+   
+   /*Hover & focus*/
+   .field input:focus::placeholder {
+    opacity: 0;
+    transition: opacity .3s;
+   }
+   
+   .btn:hover {
+    background-color: whitesmoke;
+    color: #881c1c;
+    box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
+   }
+   
+   .btn-link:hover {
+    color: #881c1c;
+   }
