--- a/static/stile homepage.css
+++ b/static/stile homepage.css
@@ -102,7 +102,7 @@ body,html {
   text-decoration: none;
   border-radius: 3px;
   margin: 3px;
-  padding: 3px;
+  padding: 4px 3px;
 }
 
 .userpage {
@@ -135,7 +135,7 @@ body,html {
     width: auto;
     justify-content:space-around;
     background-color: #fff;
-    overflow:hidden}
+  }
   .menu{
     position: absolute;
     top:47px;
@@ -145,13 +145,13 @@ body,html {
   }
   .menu li{width: 100%;} 
 
-  .menu open {right:0}
+
 
   .hamburger{
-    display: block;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    border: #000 solid;
-    height: 25px;
+    height: 21px;
     width: 30px;
     position: absolute;
     right:10px;
@@ -163,12 +163,22 @@ body,html {
     position: absolute;
     width: 30px; 
     height: 3px;
+    border: 3px;
+    border-radius: 3px;
     background-color: #881c1c;
   }
 
-  .hamburger span:nth-child(1){margin-top: 5px;}
-  .hamburger span:nth-child(2){margin-top: 10px}
-  .hamburger span:nth-child(3){margin-top: 15px;}
+  .hamburger span:nth-child(1){margin-top: -6px;}
+  .hamburger span:nth-child(2){margin-top: 0px}
+  .hamburger span:nth-child(3){margin-top: 6px;}
+
+  .open.menu{
+    position: absolute;
+    top:47px;
+    right:0%;
+    width: 100%;
+    transition: 0.3s;
+  }
 }
 
 
@@ -180,13 +190,13 @@ body,html {
   align-items: baseline;
   margin: 0;
   padding-top: 1%;
+  background-color: #881c1c;
 }
 
 
 .riquadrospot {
   display: flexbox;
   width: 70%;
-  background-color:  #f2f2f2;
   margin: 20px;
   padding: 20px;
 }
@@ -232,27 +242,41 @@ body,html {
 
 
 .creaspot {
-  display: flex;
-  justify-content: space-between;
+  display: flexbox;
+  justify-content: space-around;
   align-items: center;
   width: 90%;
-  height: 2em;
   background-color:#fff;
-  border-radius: 3px;
+  border: 3px;
+  border-radius: 5px;
+  padding: 0.3em;
   box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
   -webkit-box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
   -moz-box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
-
+  margin-bottom: 20px;
 }
+
+.spot{
+  display: flex;
+  height: 70%;
+  margin: 5px;
+}
+
 .createimg{
-  width: 15%;
-  height: 90%;
+  width: 2em;
 }
 
 #spot{
+  display: block;
   width: 100%;
   font-style: 16px;
-  border: 0px;
+  border: none;
+  margin-left: 1%;
+}
+
+.anonimo{
+  font-size: 12px;
+  margin: 5px;
 }
 
 .btninvia{
@@ -265,6 +289,23 @@ body,html {
   border-radius: 3px;
 }
 
+.rispondi{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  background-color:#fff;
+  border: 3px;
+  border-radius: 5px;
+  padding: 0.3em;
+  box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
+  -webkit-box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
+  -moz-box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
+}
+
+.rispondiimg{
+  width: 1.5em;
+}
 
 .utentelog{
   display: none;
