--- a/templates/classifica.html
+++ b/templates/classifica.html
@@ -146,7 +146,7 @@
                 buttons.forEach(function(button) {
                     button.addEventListener('click', function() {
                         if (this.classList.contains('risposta-esatta')) {
-                            this.style.backgroundColor = '881c1c';
+                            this.style.backgroundColor = '#881c1c';
                         } else {
                             this.style.backgroundColor = '#e4e4e4';
                             
